sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value pluspetit
			if(!pluspetit(k,k+1)){
                            ^