sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	def tri(){
		for(k <- 0 to getNombreValeurs()){
			if(!pluspetit(k,k+1)){
				echange(k,k+1)
			
		}
	}
	tri()
}
}